@@ -67,3 +67,4 @@
 - Added Christmas Event :)
 - Added snow toggle to client config
 < --- ABOVE Released December 4, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Dec-4-2021 ---- >
+- Shooting star discovery bonus xp is now gradually disbursed instead of lump-sump.
